--- a/site-test.yaml
+++ b/site-test.yaml
@@ -8,14 +8,14 @@ site:
 
 content:
   sources:
-    - url: git@github.com:Dave-c-Ross/chaos-engineering-guide.git
+    # - url: git@github.com:Dave-c-Ross/chaos-engineering-guide.git
+    #   tags: []
+    #   branches: ["5.0"]
+    #   start_path: documentation
+    - url: ./
       tags: []
       branches: ["overlay-1"]
       start_path: documentation
-    # - url: ./
-    #   tags: []
-    #   branches: ["overlay-1"]
-    #   start_path: documentation
     - url: https://github.com/redhat-scholars/chaos-engineering-guide.git
       tags: []
       branches: ["5.0"]
