--- a/site.yml
+++ b/site.yml
@@ -10,12 +10,8 @@ content:
   sources:
     - url: git@github.com:Dave-c-Ross/chaos-engineering-guide.git
       tags: []
-      branches: ["overlay-1"]
+      branches: ["5.0"]
       start_path: documentation
-    # - url: ./
-    #   tags: []
-    #   branches: ["overlay-1"]
-    #   start_path: documentation
     - url: https://github.com/redhat-scholars/chaos-engineering-guide.git
       tags: []
       branches: ["5.0"]
@@ -25,6 +21,7 @@ asciidoc:
   attributes:
     release-version: master
     page-pagination: true
+    page-toctitle: Contenu
   extensions:
     - ./lib/tab-block.js
     - ./lib/remote-include-processor.js
