--- a/documentation/antora.yml
+++ b/documentation/antora.yml
@@ -1,5 +1,5 @@
 name: chaos-engineering
-title: "Chaos Engineering Workshop"
+title: "Atelier d'ingénierie du chaos OpenShift"
 version: "5.0-fr"
 nav:
   - modules/ROOT/nav.adoc
